# django-rest-email-auth

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  manage.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_settings.py  test_urls.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: check-style.yml  deploy.yml  publish.yml  release-please.yml  review-build.yml  run-tests.yml
docs/: CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  Makefile  advanced-usage.rst  commands.rst  conf.py  configuration.rst  custom-serializers.rst  endpoints.rst  index.rst  installation.rst  make.bat
example_project/: manage.py  requirements.txt
example_project/example_project/: settings.py  urls.py
requirements/: ci.txt  docs.txt  test.txt
rest_email_auth/: admin.py  app_settings.py  apps.py  authentication.py  factories.py  generics.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
rest_email_auth/management/commands/: cleanemailconfirmations.py
rest_email_auth/migrations/: 0001_initial.py  0002_emailconfirmation.py  0003_unique_emails.py  0004_emailaddress_is_primary.py  0005_passwordresettoken.py  0006_fix_primary_emails.py
rest_email_auth/templates/rest_email_auth/emails/: duplicate-email.txt  duplicate-signup.txt  reset-password.txt  verify-email.txt
rest_email_auth/tests/: conftest.py
rest_email_auth/tests/authentication/: conftest.py  test_base_backend.py  test_verified_email_backend.py
rest_email_auth/tests/generics/: test_serializer_save_view.py
rest_email_auth/tests/management/commands/: test_cleanemailconfirmations_command.py
rest_email_auth/tests/models/: test_email_address_model.py  test_email_confirmation_model.py  test_model_functions.py  test_password_reset_token_model.py
rest_email_auth/tests/serializers/: test_email_serializer.py  test_email_verification_serializer.py  test_password_reset_request_serializer.py  test_password_reset_serializer.py  test_registration_serializer.py  test_resend_verification_serializer.py
rest_email_auth/tests/views/: test_email_detail_view.py  test_email_list_view.py  test_email_verification_view.py  test_password_reset_view.py  test_registration_view.py  test_request_password_reset_view.py  test_resend_verification_view.py
