[tool.black]
line-length = 79
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "django-rest-email-auth"
version = "4.0.0"
description = "Django app for email based authentication and registration via a REST API."
authors = ["Chathan Driehuys <chathan@driehuys.com>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "rest_email_auth"}]

[tool.poetry.dependencies]
python = "^3.7"
Django = ">=3.2, <5"
django-email-utils = "^1"
djangorestframework = "^3.10"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
# Required for example project's tests to pass
coreapi = "2.3.3"

[tool.poetry.group.dev.dependencies]
factory_boy = "3.2.1"
pytest = "7.2.2"
pytest-django = "4.5.2"
pytest-cov = "4.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = "^1.0.0"
sphinx = "^5"
sphinx-rtd-theme = "^1.2.0"
sphinxcontrib-httpdomain = "^1.8.1"

[tool.poetry.group.docs-dev]
optional = true

[tool.poetry.group.docs-dev.dependencies]
sphinx-autobuild = "^2020.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
