[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "django-rest-email-auth"
version = "5.0.0"
description = "Django app for email based authentication and registration via a REST API."
authors = ["Chathan Driehuys <chathan@driehuys.com>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "rest_email_auth"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=4.2, <6"
django-email-utils = "^1"
djangorestframework = "^3.16"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
# Required for example project's tests to pass
coreapi = "~=2.3"

[tool.poetry.group.dev.dependencies]
factory_boy = "~=3.3"
pytest = "~=7.4"
pytest-django = "~=4.5"
pytest-cov = "~=4.1"
pre-commit = "^4.3.0"
black = "^25.9.0"
flake8 = "^7.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = "~=1.0"
sphinx = "~=5.0"
sphinx-rtd-theme = "~=2.0"
sphinxcontrib-httpdomain = "~=1.8"

[tool.poetry.group.docs-dev]
optional = true

[tool.poetry.group.docs-dev.dependencies]
sphinx-autobuild = "~=2021.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
